--- a/metlife-claim-e2io/claim-e2io-application/src/main/resources/application.properties
+++ b/metlife-claim-e2io/claim-e2io-application/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.kafka.topic.name.scan-new=claim-capture-scan-new
 spring.kafka.topic.name.scan-add=claim-capture-scan-add
 spring.kafka.topic.name.import=claim-capture-import
 #Folder URL New case
-com.bml.folder.backup=D:\\Data\\ClaimsE2IO\\Backup
-com.bml.folder.error=D:\\Data\\ClaimsE2IO\\Error
-com.bml.folder.release=D:\\Data\\ClaimsE2IO\\Release
+com.bml.folder.backup=C:\\Data\\ClaimsE2IO\\Backup
+com.bml.folder.error=C:\\Data\\ClaimsE2IO\\Error
+com.bml.folder.release=C:\\Data\\ClaimsE2IO\\Release
 #Scan, webservice folder
 com.bml.folder.webserviceNC=WebServiceNCPPX
 com.bml.folder.WebServiceADD=WebServiceADDPPX
