--- a/metlife-claim-e2io/claim-e2io-listener/src/main/resources/application.properties
+++ b/metlife-claim-e2io/claim-e2io-listener/src/main/resources/application.properties
@@ -35,9 +35,9 @@ com.bml.filenet.wf-fnDomain=FileNet
 #Link Save Folder
 com.bml.filenet.save.folder=/Claim/PPX/
 #Folder URL New case
-com.bml.folder.backup=D:\\Data\\ClaimsE2IO\\Backup
-com.bml.folder.error=D:\\Data\\ClaimsE2IO\\Error
-com.bml.folder.release=D:\\Data\\ClaimsE2IO\\Release
+com.bml.folder.backup=C:\\Data\\ClaimsE2IO\\Backup
+com.bml.folder.error=C:\\Data\\ClaimsE2IO\\Error
+com.bml.folder.release=C:\\Data\\ClaimsE2IO\\Release
 com.bml.file.file-extensions=PDF,TIF,TIFF,HTM,HTML,MSG,DOC,DOCX,XLS,XLSX,PPT,PPTX,TXT,JPG,JPEG,GIF,PNG,ZIP,BMP,CSV,XML
 com.bml.file.delimiter=_
 #Scan, webservice folder
