--- a/metlife-claim-e2io/claim-e2io-scheduler/pom.xml
+++ b/metlife-claim-e2io/claim-e2io-scheduler/pom.xml
@@ -60,8 +60,7 @@
         <dependency>
             <groupId>com.vsii</groupId>
             <artifactId>claim-e2io-model</artifactId>
-            <version>1.0.1</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
