--- a/metlife-claim-e2io/claim-e2io-scheduler/src/main/resources/application.properties
+++ b/metlife-claim-e2io/claim-e2io-scheduler/src/main/resources/application.properties
@@ -2,16 +2,18 @@ server.port=8082
 jasypt.encryptor.bean=encryptorBean
 spring.task.scheduling.pool.size=10
 ##db2 database
-#db2.database.url=jdbc:db2://192.168.0.153:50000/IWS
-#db2.database.username=db2admin
+db2.database.url=jdbc:db2://192.168.0.153:50000/IWS
+db2.database.username=db2admin
 #db2.database.password=ENC(RcRXquJSqCxYr8gAfW0Jz/VGEUJyKuwq)
-##db2.database.password=Admin@123
-#db2.database.driver=com.ibm.db2.jcc.DB2Driver
+db2.database.password=Admin123
+db2.database.driver=com.ibm.db2.jcc.DB2Driver
+
 #ODS database
-ods.database.sqlserver.driver=net.sourceforge.jtds.jdbc.Driver
-ods.database.sqlserver.connection.url=jdbc:jtds:sqlserver://192.168.0.169:1433/L7UAT_REPL
-ods.database.sqlserver.username=sa
-ods.database.sqlserver.password=ENC(VG8UEvFo6pq0AJAsTSpm7/2xx8bWe/yA)
+#ods.database.sqlserver.driver=net.sourceforge.jtds.jdbc.Driver
+#ods.database.sqlserver.connection.url=jdbc:jtds:sqlserver://192.168.0.169:1433/L7UAT_REPL
+#ods.database.sqlserver.username=sa
+#ods.database.sqlserver.password=ENC(VG8UEvFo6pq0AJAsTSpm7/2xx8bWe/yA)
+
 #database
 spring.datasource.url=jdbc:db2://192.168.0.153:50000/IWS
 spring.datasource.username=db2admin
@@ -37,6 +39,9 @@ com.bml.retry.schedule.cron-expression=0 */5 * * * *
 com.bml.folder.retry=D:\\Data\\e2io\\Release\\Retry
 #Error target
 com.bml.folder.error=D:\\Data\\e2io\\Error
+com.bml.folder.release=D:\\Data\\e2io\\Release
+com.bml.folder.backup=D:\\Data\\e2io\\Backup
+
 com.bml.folder.scan-add=ScanNBADP
 com.bml.folder.webservice-add=WebserviceNBADP
 #url file log
@@ -45,6 +50,19 @@ logging.file.name=C:\\E2IO\\e2io-scheduler-log
 logging.file.max-history=20
 #max file size
 logging.file.max-size=50MB
+
+#Validate info
+com.bml.folder.webservice-new.delimiter=_
+com.bml.folder.webservice-add.delimiter=_
+com.bml.file.delimiter=_
+
+#filenet coonfig
+com.bml.filenet.uri=http://192.168.0.210:9080/wsi/FNCEWS40MTOM
+com.bml.filenet.username=ecm.uat.ce.user
+#com.bml.filenet.password=ENC(VG8UEvFo6pq0AJAsTSpm7/2xx8bWe/yA)
+com.bml.filenet.password=Admin@123
+com.bml.filenet.osName=IWBPM
+com.bml.filenet.stanza=FileNetP8WSI
 
 
 
